--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -70,6 +70,15 @@ http {
 
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/*;
+
+	server {
+		location ^~ /uploads/ {
+			root /home/box/web/
+		}
+		location ~* \.$ {
+			root /home/box/web/public/
+		}
+	}
 }
 
 
