--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -74,10 +74,10 @@ http {
 	server {
 		listen 80 default;
 		location ^~ /uploads/ {
-			root /home/box/web/
+			root /home/box/web/;
 		}
 		location ~* \.$ {
-			root /home/box/web/public/
+			root /home/box/web/public/;
 		}
 	}
 }
