--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -73,11 +73,14 @@ http {
 
 	server {
 		listen 80 default;
-		location ^~ /uploads/ {
-			root /home/box/web/;
+		location ~* \Q/uploads/\E\w+ {
+		root /home/box/web;
 		}
-		location ~* \.$ {
-			root /home/box/web/public/;
+		location / {
+		return 404;
+		}
+		location ~* ^.+\.\w+$ {
+		root /home/box/web/public;
 		}
 	}
 }
