--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -73,14 +73,11 @@ http {
 
 	server {
 		listen 80 default;
-		location ~* \Q/uploads/\E\w+ {
-		root /home/box/web;
-		}
+		proxy_set_header Host		$host;
+		proxy_set_header X-Real-IP	$remote_addr;
+		
 		location / {
-		return 404;
-		}
-		location ~* ^.+\.\w+$ {
-		root /home/box/web/public;
+			proxy_pass http://0.0.0.0/
 		}
 	}
 }
